# launch-library-datasette

./: LaunchLibrary API to SQL dump.ipynb  Untitled.ipynb  launchlibrary.db  ll1.sqlite  metadata.json  pyproject.toml
data/: pads.csv
